--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ identify==2.6.3
 isort==5.13.2
 mccabe==0.7.0
 nodeenv==1.9.1
+pillow==11.0.0
 platformdirs==4.3.6
 pre_commit==4.0.1
 pylint==3.3.3
