feature: Add update, delete, detail; Add carInventory; Add connection openai_API

--- a/.pylintrc
+++ b/.pylintrc
@@ -12,8 +12,14 @@ disable=
       R0801, #DUPLICATE-CODE
       C0415, #IMPORT-OUTSIDE-TOPLEVEL
       W0611, #Unused render imported
-      E0307,  #invalid-str-returned
-      E1101 #no-member
+      E0307, #invalid-str-returned
+      E1101, #no-member
+      W0613, #unused-argument
+      R0903, #too-few-public-methods
+      R0901 #too-many-ancestors
+
+
+
 
 # Analyse import fallback blocks. This can be used to support both Python 2 and
 # 3 compatible code, which means that the block might have code that exists
