--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,36 @@
+annotated-types==0.7.0
+anyio==4.8.0
 asgiref==3.8.1
 astroid==3.3.8
+certifi==2024.12.14
 cfgv==3.4.0
 colorama==0.4.6
 dill==0.3.9
 distlib==0.3.9
+distro==1.9.0
 Django==5.1.4
 filelock==3.16.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 identify==2.6.3
+idna==3.10
 isort==5.13.2
+jiter==0.8.2
 mccabe==0.7.0
 nodeenv==1.9.1
+openai==1.59.7
 pillow==11.0.0
 platformdirs==4.3.6
 pre_commit==4.0.1
+pydantic==2.10.5
+pydantic_core==2.27.2
 pylint==3.3.3
 PyYAML==6.0.2
+sniffio==1.3.1
 sqlparse==0.5.3
 tomlkit==0.13.2
+tqdm==4.67.1
+typing_extensions==4.12.2
 tzdata==2024.2
 virtualenv==20.28.0
